--- a/ds1m-b/viniciusNunes/index.html
+++ b/ds1m-b/viniciusNunes/index.html
@@ -59,10 +59,14 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#personagens">Personagens</a></li>
-            <li><a href="#trama">Trama</a></li>
-            <li><a href="#creditos">Créditos</a></li>
+            <li><a href="#home" class="nav-list__animation">HOME</a></li>
+            <li>
+              <a href="#personagens" class="nav-list__animation">PERSONAGENS</a>
+            </li>
+            <li><a href="#trama" class="nav-list__animation">TRAMA</a></li>
+            <li>
+              <a href="#creditos" class="nav-list__animation">CRÉDITOS</a>
+            </li>
           </ul>
         </nav>
       </header>
