responsividade home completa

--- a/ds1m-b/one-page-leticia/index.html
+++ b/ds1m-b/one-page-leticia/index.html
@@ -58,6 +58,11 @@
             <a href="#contato">Contato</a>
         </li>
     </ul>
+    <ul class="menu-icon">
+        <li class="menu__icon">
+            <i class="fa-solid fa-bars"></i>
+        </li>
+    </ul>
     </nav>
 </header>  
 
