responsividade em processo

--- a/ds1m-b/one-page-leticia/index.html
+++ b/ds1m-b/one-page-leticia/index.html
@@ -31,7 +31,7 @@
       <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
       <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
-      </script>
+      </script> 
 <header> 
      <div class="logo">
         <img src="./img/logo_studio.png" alt="imagem logo">
@@ -76,13 +76,13 @@
     <section class="sobre" id = "sobre">
         <h2 class="section-title">Sobre</h2>
         <p class="text">
-            O Studio Ghibli é um estúdio de animação japonês, sediado em Koganei, Tóquio. Fundado em 1985, por Hayao Miyazaki, Isao Takahata, Toshio Suzuki e Yasuyoshi        Tokuma, logo após o sucesso uniram-se para fazer filmes animados do jeito que quisessem fazer. Assim, o primeiro filme do Studio Ghibli, que estreou em 1986, foi 
-            O Castelo no Céu levando 775 mil pessoas aos cinemas – um sucesso de bilheteria e de crítica.<br/>
+            O Studio Ghibli é um estúdio de animação japonês, sediado em Koganei, Tóquio. Fundado em 1985, por Hayao Miyazaki, Isao Takahata, Toshio Suzuki e Yasuyoshi Tokuma, logo após o sucesso uniram-se para fazer filmes animados do jeito que quisessem fazer. Assim, o primeiro filme do Studio Ghibli, que estreou em 1986, foi 
+            O Castelo no Céu levando 775 mil pessoas aos cinemas – um sucesso de bilheteria e de crítica.<br>
 
-            <br/>O estúdio lançou seu primeiro filme, O Castelo no Céu, no ano seguinte. O logotipo 
-            da empresa é o Totoro, o personagem do filme Meu Amigo Totoro, lançado em 1988.<br/>
+    </br>O estúdio lançou seu primeiro filme, O Castelo no Céu, no ano seguinte. O logotipo 
+            da empresa é o Totoro, o personagem do filme Meu Amigo Totoro, lançado em 1988.<br>
 
-            <br/>Com exceção de seis produções, todos os filmes do estúdio foram dirigidos por Hayao Miyazaki e Isao Takahata. Toshio Suzuki, por sua vez, é o produtor da 
+            </br>Com exceção de seis produções, todos os filmes do estúdio foram dirigidos por Hayao Miyazaki e Isao Takahata. Toshio Suzuki, por sua vez, é o produtor da 
             maioria deles. Em 2001, o Museu Ghibli, um museu dedicado as obras do estúdio, foi 
             inaugurado.
         </p>
@@ -116,7 +116,7 @@
     <section class="filmes" id="filmes">
         <h2 class="section-title">Filmes</h2>
         <p class="description">
-            O studio possui cerca de 24 filmes, curtas- metragens, comercias, documentários<br/>
+            O studio possui cerca de 24 filmes, curtas- metragens, comercias, documentários
             entre outras atrações!  Esses são os meus favoritos do momento:
         </p>
         <div class="card-container">
@@ -146,9 +146,6 @@
     </section>
 
     <section class="museu" id="museu">
-        <div class="logo">
-            <img src="./img/logo_studio.png" alt="">
-        </div> 
         <h2 class="section-title">Museu</h2>
         <div class="text">
             <h3 class="text__title">Sobre:</h3>
