--- a/ds1m-b/Paula-B/index.html
+++ b/ds1m-b/Paula-B/index.html
@@ -59,10 +59,9 @@
         </section>
         <section class="sobre" id="sobre">
             <div class="icon">
-                <h2 class="titlee"> SOBRE</h2>
+                <h2 class="title_main"> SOBRE</h2>
                 <img src="./img/bola.png" alt="bola" class="bola" href="#bola">
             </div>
-
             <div class="sobre-gatos">
                 <div class="description-cat">
                     <span class="description-title">
@@ -96,9 +95,9 @@
                     </div>
                 </div>
         </section>
-        <section class="racas" id="racas">
+         <section class="racas" id="racas">
             <div class="icon">
-                <h2 class="titlee"> RAÇAS</h2>
+                <h2 class="title_main"> RAÇAS</h2>
                 <img src="./img/icon2.png" alt="" class="icon2">
             </div>
 
@@ -141,7 +140,7 @@
 
                 <div class="raca ">
                     <a href="https://www.petlove.com.br/sphynx/r" class="card" target="_blank">
-                        <img class="raca__image" src="./img/spinks 1.png " alt=" ">
+                        <img class="raca__image" src="./img/spinks.png " alt=" ">
                     </a>
                 </div>
             </div>
@@ -156,7 +155,7 @@
                     <a href="https://www.peritoanimal.com.br/racas-de-gatos.html" target="_blank">Outros</a>
                 </li>
             </ul>
-        </section>
+        </section> 
         <section></section>
         <section></section>
         <section></section>
