--- a/ds1m-b/Eduardo Ribeiro Pimenta/index.html
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/novidades.css">
     <link rel="stylesheet" href="./css/banner.css">
     <link rel="stylesheet" href="./css/buttom.css">
+    <link rel="stylesheet" href="./css/download.css">
     <script src="https://kit.fontawesome.com/79c69653b7.js" crossorigin="anonymous"></script>
     <title>among us</title>
 </head>
@@ -88,7 +89,31 @@
                 </a>
             </div>
         </section>
-        <section class="download" id="download"></section>
+        <section class="download" id="download">
+            <h2 class="section-title">DOWNLOaD</h2>
+            <div class="download__container">
+                <div class="mobile">
+                    <h3>mobile</h3>
+                    <a href="https://play.google.com/store/" target="_blank">
+                        <img src="./img/google_play.png" alt="google play">
+                    </a>
+                    <a href="https://www.apple.com/br/app-store/" target="_blank">
+                        <img src="./img/app_store.png" alt="apple store">
+                    </a>
+                    
+                </div>
+                <div class="desktop">
+                    <h3>desktop</h3>
+                    <a href="https://store.steampowered.com/" target="_blank">
+                        <img src="./img/steam.png" alt="steam">
+                    </a>
+                   <a href="https://store.epicgames.com/pt-BR/" target="_blank">
+                        <img src="./img/epic.png" alt=" epic games store">
+                   </a>
+                    
+                </div>
+            </div>
+        </section>
     </main>
     <footer>footer</footer>
     <script src="./js/carrousel.js"></script>
