--- a/ds1m-b/Eduardo Ribeiro Pimenta/index.html
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/banner.css">
     <link rel="stylesheet" href="./css/buttom.css">
     <link rel="stylesheet" href="./css/download.css">
+    <link rel="stylesheet" href="./css/among.css">
     <script src="https://kit.fontawesome.com/79c69653b7.js" crossorigin="anonymous"></script>
     <title>among us</title>
 </head>
@@ -36,7 +37,7 @@
     </header>
     <main>
         <section class="home" id="home">
-            <img class="logo" src="./img/logo.png" alt="logo Among Us">
+            <h1>AMONG US</h1>
         </section>
         <section class="sobre" id="sobre">
             <h2 class="section-title">Sobre</h2>
@@ -44,6 +45,10 @@
             <span class="tripulante">tripulantes</span> é encontrar o
             <span class="impostor">impostor</span>, que tem como objetivo eliminar os outros jogadores sem ser descobrerto.</p>
             <img src="./img/tablet.png" alt="tablet amongus">
+            <div class="among">
+                <img class="red" src="./img/red.png" alt="">
+                <img class="pink"src="img/pink.png" alt="">
+            </div>
         </section>
         <section class="novidades" id="novidades">
             <h2 class="section-title">Novidades</h2>
@@ -70,6 +75,16 @@
                             <img class="molde" class="images" src="./img/molde.png" alt="molde">
                             <span>AMONG US X ARCANE</span>
                         </div>
+                        <div class="banner">
+                            <img class="images" src="./img/nova_aba_customiacao.png" alt="">   
+                            <img class="molde" class="images" src="./img/molde.png" alt="molde">
+                            <span>NOVA ABA DE CUSTOMIZAÇÃO</span>
+                        </div>
+                        <div class="banner">
+                            <img class="images" src="./img/novidades.png" alt="">   
+                            <img class="molde" class="images" src="./img/molde.png" alt="molde">
+                            <span>NOVIDADES EM BREVE!!!</span>
+                        </div>
                     </div>
                 </div>
                 <div class="arrows">
@@ -88,6 +103,8 @@
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </div>
+            <img class="cian" src="./img/cian.png" alt="">
+            <img class="green" src="./img/green.png" alt="">
         </section>
         <section class="download" id="download">
             <h2 class="section-title">DOWNLOaD</h2>
@@ -110,12 +127,18 @@
                    <a href="https://store.epicgames.com/pt-BR/" target="_blank">
                         <img src="./img/epic.png" alt=" epic games store">
                    </a>
-                    
                 </div>
             </div>
+            <img class="brown" src="./img/brown.png" alt="">
+            <img class="yellow" src="./img/yellow.png" alt="">
         </section>
-    </main>
-    <footer>footer</footer>
+        
+    <footer>
+        <div class="a">
+            <p>Todos os direitos reservados 2022 | Desenvolvido por Eduardo Ribeiro</p>         
+        </div> 
+        <img class="orange" src="./img/orange.png" alt="">
+    </footer>
     <script src="./js/carrousel.js"></script>
 </body>
 </html>
