--- a/ds1m-b/one-page-leticia/index.html
+++ b/ds1m-b/one-page-leticia/index.html
@@ -79,16 +79,18 @@
             O Studio Ghibli é um estúdio de animação japonês, sediado em Koganei, Tóquio. Fundado em 1985, por Hayao Miyazaki, Isao Takahata, Toshio Suzuki e Yasuyoshi Tokuma, logo após o sucesso uniram-se para fazer filmes animados do jeito que quisessem fazer. Assim, o primeiro filme do Studio Ghibli, que estreou em 1986, foi 
             O Castelo no Céu levando 775 mil pessoas aos cinemas – um sucesso de bilheteria e de crítica.<br>
 
-    </br>O estúdio lançou seu primeiro filme, O Castelo no Céu, no ano seguinte. O logotipo 
-            da empresa é o Totoro, o personagem do filme Meu Amigo Totoro, lançado em 1988.<br>
-
-            </br>Com exceção de seis produções, todos os filmes do estúdio foram dirigidos por Hayao Miyazaki e Isao Takahata. Toshio Suzuki, por sua vez, é o produtor da 
+            </br>O estúdio lançou seu primeiro filme, O Castelo no Céu, no ano seguinte. O logotipo 
+            da empresa é o Totoro, o personagem do filme Meu Amigo Totoro, lançado em 1988.
+            Com exceção de seis produções, todos os filmes do estúdio foram dirigidos por Hayao Miyazaki e Isao Takahata. Toshio Suzuki, por sua vez, é o produtor da 
             maioria deles. Em 2001, o Museu Ghibli, um museu dedicado as obras do estúdio, foi 
             inaugurado.
         </p>
     </section>
 
     <section class="fundadores" id = "fundadores">
+        <div class="logo">
+            <img src="./img/logo_studio.png" alt="imagem logo">
+        </div>
         <h2 class="section-title">Fundadores</h2>
 
         <section class="nome-fundadores">
@@ -117,7 +119,7 @@
         <h2 class="section-title">Filmes</h2>
         <p class="description">
             O studio possui cerca de 24 filmes, curtas- metragens, comercias, documentários
-            entre outras atrações!  Esses são os meus favoritos do momento:
+            entre outras atrações!<br>Esses são os meus favoritos do momento:
         </p>
         <div class="card-container">
             <a href="https://www.netflix.com/br/title/60027106" target="_blank" class="card">
@@ -150,7 +152,7 @@
         <div class="text">
             <h3 class="text__title">Sobre:</h3>
             <p class="description__text">
-                O <a href="https://studioghibli.com.br/museu-ghibli/" target="_blank">Museu Ghibli</a> é um espaço de arte totalmente dedicado às obras do Studio Ghibli. 
+                O <b><a href="https://studioghibli.com.br/museu-ghibli/" target="_blank">Museu Ghibli</a></b> é um espaço de arte totalmente dedicado às obras do Studio Ghibli. 
                 Seu planejamento começou em 1998. Já a construção começou em Março de 2000, e foi aberto 
                 oficialmente 01 de Outubro de 2001. Em si é uma obra caprichosamente desenhada que remete 
                 aos diferentes filmes, e muitos de seus famosos personagens estão lá!
@@ -189,8 +191,9 @@
     </section>
 
     <section class="contatos" id="contato">
+            
+        
         <h2 class="section-title">Contatos</h2>
-
         <ul class="link-container">
             <li>
                 <h3>Links</h3>
@@ -205,7 +208,7 @@
                 <a href="#fundadores">Fundadores</a>
             </li>
             <li>
-                <a href="#filmes">Contatos</a>
+                <a href="#filmes">Filmes</a>
             </li>
             <li>
                 <a href="#museu">Museu</a>
