--- a/ds1m-b/Paula-B/index.html
+++ b/ds1m-b/Paula-B/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/sobre.css">
     <link rel="stylesheet" href="./css/raças.css">
+    <link rel="stylesheet" href="./css/curiosidades.css">
+    <link rel="stylesheet" href="./css/slider-images.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,10 +41,10 @@
                     <a href="#sobre">Sobre</a>
                 </li>
                 <li>
-                    <a href="#raças">Raças</a>
+                    <a href="#racas">Raças</a>
                 </li>
                 <li>
-                    <a href="#Curiosidades">Curiosidades</a>
+                    <a href="#curiosidades">Curiosidades</a>
                 </li>
                 <li>
                     <a href="#gif">Gif</a>
@@ -95,7 +97,7 @@
                     </div>
                 </div>
         </section>
-         <section class="racas" id="racas">
+        <section class="racas" id="racas">
             <div class="icon">
                 <h2 class="title_main"> RAÇAS</h2>
                 <img src="./img/icon2.png" alt="" class="icon2">
@@ -132,7 +134,7 @@
                     </a>
 
                 </div>
-                <div class="racas-container">
+                <div class="raca">
                     <a href="https://www.petlove.com.br/siames/r" class="card" target="_blank">
                         <img src="./img/siames.png" alt="">
                     </a>
@@ -155,12 +157,63 @@
                     <a href="https://www.peritoanimal.com.br/racas-de-gatos.html" target="_blank">Outros</a>
                 </li>
             </ul>
-        </section> 
-        <section></section>
+        </section>
+        <section class="curiosidades" id="curiosidades">
+            <div class="icon">
+                <h2 class="title_main"> CURIOSIDADES</h2>
+                <img src="./img/CURIO.png" alt="" class="icon2">
+            </div>
+            <div class="curiosidade_text">
+                <p class="text"> A estimativa é que existam, atualmente, 500 milhões de gatos domesticados pelo mundo, sendo 40 raças reconhecidas oficialmente, em média, além dos gatos sem raça definida (SRDs).
+                </p>
+                <p class="text"> Um gato roça num humano não apenas para mostrar afeto, mas também para marcar o seu território, devido ao odor que as glândulas à volta da sua face libertam. A cauda e as patas também têm o mesmo odor do gato.
+                </p>
+            </div>
+            <div class="slideshow-container">
+                <div class="mySlides-images fade">
+                    <img src="./img/circulo.png" class="redondo" alt="">
+                </div>
+                <div class="mySlides-images fade">
+                    <img src="./img/slide1.png" alt="Image Cat 6" />
+                </div>
+                <div class="mySlides-images fade">
+                    <img src="./img/slide2.png" alt="Image Cat 6" />
+                </div>
+                <div class="mySlides-images fade">
+                    <img src="./img/slide3.png" alt="Image Cat 6" />
+                </div>
+                <div class="mySlides-images fade">
+                    <img src="./img/slide4.png" alt="Image Cat 6" />
+                </div>
+                <div class="mySlides-images fade">
+                    <img src="./img/slide5.png" alt="Image  6" />
+                </div>
+                <div class="mySlides-images fade">
+                    <img src="./img/slide6.png " alt="Image 6" />
+                </div>
+                <div class="mySlides-images fade ">
+                    <img src="./img/slide7.png " alt="Image 6 " />
+                </div>
+            </div>
+
+
+            <div class="curiosidade_text ">
+                <p class="text ">Os gatos caseiros podem chegar a dormir 16 horas por dia, podendo ficar um terço da vida dormindo. Assim, se seu gato viver 9 anos, apenas 3 serão com os olhinhos abertos.
+                </p>
+                <p class="text "> A audição dos gatos é melhor que a canina e, principalmente, do que a nossa. Eles conseguem ouvir sons de alta frequência, cerca de 2 oitavas acima de qualquer ser humano.
+                </p>
+
+            </div>
+
+
+        </section>
         <section></section>
         <section></section>
     </main>
     <footer></footer>
+    <script>
+        showSlidesImages();
+    </script>
 </body>
 
 </html>
