--- a/ds1t-b/claudioSousa/index.html
+++ b/ds1t-b/claudioSousa/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Churrascaria Sousa</title>
 
+    <link rel="stylesheet" href="CSS/title.css">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/nav.css">
     <link rel="stylesheet" href="CSS/home.css">
     <link rel="stylesheet" href="CSS/cardapio.css">
-    <link rel="stylesheet" href="CSS/title.css">
     <link rel="stylesheet" href="CSS/reservasELocalizacao.css">
     <link rel="stylesheet" href="CSS/contato.css">
+    <link rel="stylesheet" href="CSS/bars.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,6 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lalezar&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/5ed2d43b7d.js" crossorigin="anonymous"></script>
+    <script src="./js/bars.js" defer></script>
 
 </head>
 
@@ -38,13 +40,17 @@
 
     <header>
         <nav>
+            <a href="#" class="container-burguer">
+                <i class="menu-burguer"></i>
+            </a>
+
             <ol class="header-list">
 
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Cardápio</a></li>
-                <li><a href="#">Localização</a></li>
-                <li><a href="#">Reservas</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#home">Início</a></li>
+                <li><a href="#cardapio">Cardápio</a></li>
+                <li><a href="#localizacao">Localização</a></li>
+                <li><a href="#reservas">Reservas</a></li>
+                <li><a href="#contato">Contato</a></li>
 
             </ol>
 
@@ -52,13 +58,13 @@
     </header>
     <main>
 
-        <section class="home">
+        <section class="home" id="home">
 
             <img src="IMG/logoChurrascaria.PNG" alt="Logo da churrascaria Sousa" class="img-logo">
 
         </section>
 
-        <section class="cardapio">
+        <section class="cardapio" id="cardapio">
 
             <h2 class="title ml">Cardápio</h2>
 
@@ -99,9 +105,9 @@
             <div class="card-foto"></div>
 
         </section>
-        <section class="reservasELocalizacao">
+        <section class="reservasELocalizacao" >
 
-            <div class="reservas">
+            <div class="reservas" id="reservas">
                 <h2 class="title">Reservas</h2>
                 <div class="reservas-bg">
                     <p>Realize sua reserva conosco,</p>
@@ -116,7 +122,7 @@
 
             </div>
 
-            <div class="localizacao">
+            <div class="localizacao" id="localizacao">
                 <h2 class="title">Localização</h2>
                 <div class="localizacao-bg">
                     <div class="localizacao-esc">
@@ -125,7 +131,7 @@
                         <p>06453-016</p>
 
                     </div>
-                    <img src="./IMG/gps.png" alt="Foto do google maps">
+                    <img src="./IMG/gps.png" alt="Foto do google maps" class="maps">
                 </div>
 
 
@@ -169,7 +175,7 @@
                     <h3 class="compreAqui-title">Compre Aqui</h3>
                 </li>
                 <li>
-                   <a href=""><img src="./IMG/ifood.png" alt="Foto do Ifood"></a> 
+                   <a href=""><img  class="ifood-img" src="./IMG/ifood.png" alt="Foto do Ifood"></a> 
                 </li>
             </ul>
             <ul class="link-container">
