Home mobile feito

--- a/ds1t-b/André Luiz/index.html
+++ b/ds1t-b/André Luiz/index.html
@@ -49,6 +49,9 @@
                 </li>
             </ul>
         </nav>
+        <div class="menubar-container">
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </header>
     <section class="section-home">
         <div class="promotion-text-container">
