--- a/ds1m-b/Paula-B/index.html
+++ b/ds1m-b/Paula-B/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./css/raças.css">
     <link rel="stylesheet" href="./css/curiosidades.css">
     <link rel="stylesheet" href="./css/slider-images.css">
+    <link rel="stylesheet" href="./css/cuidados.css">
+    <link rel="stylesheet" href="./css/contato.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,11 +26,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
 
-    <script src="./js/slide.js"></script>
+    
     <script src="https://kit.fontawesome.com/6cc8a6f404.js" crossorigin="anonymous"></script>
 
     <title>a cat's life</title>
 </head>
+<script src="./js/slide.js"></script>
 
 <body>
     <header>
@@ -47,7 +50,7 @@
                     <a href="#curiosidades">Curiosidades</a>
                 </li>
                 <li>
-                    <a href="#gif">Gif</a>
+                    <a href="#cuidados">Cuidados</a>
                 </li>
                 <li>
                     <a href="#Contato">Contato</a>
@@ -56,6 +59,9 @@
         </nav>
     </header>
     <main>
+        <a href="#" class="voltar">
+            <i class="fa-solid fa-paw"></i>
+        </a>
         <section class="home" id="home">
             <h1 class="title">GATOS</h1>
         </section>
@@ -195,6 +201,16 @@
                     <img src="./img/slide7.png " alt="Image 6 " />
                 </div>
             </div>
+            <div class="dots-images">
+                <span class="dot-images"></span>
+                <span class="dot-images"></span>
+                <span class="dot-images"></span>
+                <span class="dot-images"></span>
+                <span class="dot-images"></span>
+                <span class="dot-images"></span>
+                <span class="dot-images"></span>
+                <span class="dot-images"></span>
+            </div>
 
 
             <div class="curiosidade_text ">
@@ -207,10 +223,46 @@
 
 
         </section>
-        <section></section>
-        <section></section>
+        <section class="cuidados" id="cuidados">
+            <div class="icon">
+                <h2 class="title_main">CUIDADOS</h2>
+                <img src="./img/PATINHA.png" alt="" class="icon2">
+            </div>
+            <div class="cuidados_container">
+                
+            </div>
+        </section>
+        <section class="Contato" id="Contato">
+            <div class="contatos">
+                <div class="contato-title">
+                    <h2 class="title-contato"> Contatos</h2>
+                </div>
+                <div class="contatos-description">
+                    <span>(11)96982-8192</span>
+                    <span>Paulablesa6@gmail.com</span>
+                </div>
+            </div>
+            <div class="dedo">
+                <img src="./img/dedo.png" alt="">
+            </div>
+            <div class="contatos">
+                <div class="contato-title">
+                    <h2 class="title-redes-sociais">Redes sociais</h2>
+                </div>
+                <div class="contatos-icon">
+
+                    <a href="https://www.instagram.com/p_blesaa/" target="_blank">
+                        <img src="./img/icon-instagram.png" alt="">
+                    </a>
+                    <a href="https://www.linkedin.com/in/paula-blesa-5ab53224a/" target="_blank">
+                        <img src="./img/icon-linkedin.png" alt="">
+                    </a>
+
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer> Copyright ©️ | Todos os Direitos Reservados 2022 | Desenvolvido por Paula Blesa</footer>
     <script>
         showSlidesImages();
     </script>
