--- a/ds1t-b/yasmin/index.html
+++ b/ds1t-b/yasmin/index.html
@@ -82,6 +82,13 @@
 
         <section class="avaliacoes" id="avaliacoes"></section>
 
+            <div class="avaliacoes__divs">
+                <div class="avaliacoes1">
+                    
+                </div>
+            </div>
+
+
         <section class="contato" id="contato"></section>
 
     </main>
