--- a/ds1t-b/one-page-x/index.html
+++ b/ds1t-b/one-page-x/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,8 @@
     <script src="https://kit.fontawesome.com/35bab1e1be.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Rubik:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Rubik:ital,wght@0,400;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/menu.css">
@@ -15,8 +17,11 @@
     <link rel="stylesheet" href="css/button-assista-agora.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/descricao-filme.css">
+    <link rel="stylesheet" href="css/elenco.css">
+    <link rel="stylesheet" href="css/concept.css">
     <title>X, a marca da morte</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -66,35 +71,34 @@
             </nav>
         </section>
         <section class="descricao-filme" id="descricao-filme">
-
-            <p class="frase-efeito"><span class="i">“I</span> <span class="am">am</span> <span class="a">a</span><span class="star"> star”</span></p>
+            <p class="frase-efeito"><span class="i">“I</span> <span class="am">am</span> <span class="a">a</span><span
+                    class="star"> star”</span></p>
             <div class="descricao">
                 <h1 class="titulo">Sobre o filme</h1>
-                
                 <p class="lançamento">Lançamento: 11 de agosto de 2022</p>
                 <br>
                 <div class="sobre-o-filme">
-                    <p>O filme “X, a marca da morte” foi produzido pela A24, um estúdio de filme 
-                    norte-americano já conhecido pelas produções de “Midsommar: O mal não 
-                    espera a noite” e “Hereditário”.</p>
+                    <p>O filme “X, a marca da morte” foi produzido pela A24, um estúdio de filme
+                        norte-americano já conhecido pelas produções de “Midsommar: O mal não
+                        espera a noite” e “Hereditário”.</p>
                     <br>
-                    <p>Se passando no Texas, onde um grupo de atores vai para a zona rural onde 
-                    pretendem fazer um filme, ficando hospedados na casa de dois idosos, Pearl 
-                    e Howard, mais tarde todo o elenco começa a lutar por suas vidas sendo 
-                    perseguidos pelo casal.</p>
+                    <p>Se passando no Texas, onde um grupo de atores vai para a zona rural onde
+                        pretendem fazer um filme, ficando hospedados na casa de dois idosos, Pearl
+                        e Howard, mais tarde todo o elenco começa a lutar por suas vidas sendo
+                        perseguidos pelo casal.</p>
                     <br>
-                    <p>Nossa principal estrela é Mia Goth que interpretou Pearl e Maxine que já foi 
-                    classificada como a nova musa do terror, além de X, Mia já esteve em Suspiria 
-                    no papel de Sara Simms.</p>
+                    <p>Nossa principal estrela é Mia Goth que interpretou Pearl e Maxine que já foi
+                        classificada como a nova musa do terror, além de X, Mia já esteve em Suspiria
+                        no papel de Sara Simms.</p>
                     <br>
-                    <p>O filme é um clássico Slasher tendo 96% das críticas positivas, o estúdio em 
-                    si já parece experiente no gênero já que os outros filmes mensionados não sendo 
-                    da sequencias são um sucesso entre fâs de terror e horror. Ele arrecadou mais de 
-                    14,5 milhões de dólares tendo um orçamento de apenas 1 milhão.</p>
+                    <p>O filme é um clássico Slasher tendo 96% das críticas positivas, o estúdio em
+                        si já parece experiente no gênero já que os outros filmes mensionados não sendo
+                        da sequencias são um sucesso entre fâs de terror e horror. Ele arrecadou mais de
+                        14,5 milhões de dólares tendo um orçamento de apenas 1 milhão.</p>
                     <br>
                     <p>X é o primeiro filme de uma trilogia, seguido pelo segundo filme que conta a história
-                    da senhora Pearl e sua vida na fazenda mostrada, o terceiro previsto para 2023 seguira 
-                    com a personagem principal Maxine que deseja se mostrando promissor.</p>
+                        da senhora Pearl e sua vida na fazenda mostrada, o terceiro previsto para 2023 seguira
+                        com a personagem principal Maxine que deseja se mostrando promissor.</p>
                 </div>
                 <div class="botao-alugue">
                     <a href="#" class="alugue-agora">Alugue o filme agora</a>
@@ -103,13 +107,174 @@
             <div class="img-pearl">
                 <img src="./img/img-pearl.png" alt="">
             </div>
-            <p class="nome-do-filme">X   a marca da morte</p>
+            <p class="nome-do-filme">X a marca da morte</p>
             <p class="diretor">by Ti West</p>
         </section>
-        <section class="elenco" id="elenco"></section>
-        <section class="concept" id="concept"></section>
+        <section class="elenco" id="elenco">
+            <h1 class="titulo-elenco">Elenco</h1>
+            <div class="atores-um">
+                <div class="descricao-mia">
+                    <div class="fotos-pearl">
+                        <img class="maxine-elenco" src="img/maxine.png" alt="">
+                        <i class="fa-solid fa-star"></i>
+                        <img class="pearl-elenco" src="img/pearl.png" alt="">
+                    </div>
+                    <div class="mia">
+                        <p class="name-mia">
+                            Mia Goth
+                        </p>
+                        <p class="description-mia">
+                            Mia Gypsy Mello da Silva Goth é uma atriz e
+                            modelo britânica. Tornou-se conhecida por interpretar P no filme
+                            Nymphomaniac: Vol. II e Sophie Campbell na série The Tunnel.
+                            No filme interpretou Maxine e Pearl.
+                        </p>
+                    </div>
+                </div>
+                <div class="descricao-martin">
+                    <div class="foto-martin">
+                        <img src="img/Martin (1).png" alt="">
+                    </div>
+                    <div class="martin">
+                        <p class="name-martin">
+                            Martin Henderson
+                        </p>
+                        <p class="description-martin">
+                            Martin Henderson é um ator neozelandês. É conhecido por interpretar
+                            Noah Miller no filme de terror The Ring. Em X ficou
+                            com o papel de Wayne Golroy.
+                        </p>
+                    </div>
+                </div>
+                <div class="descricao-jenna">
+                    <div class="foto-jenna">
+                        <img src="img/Jenna.png" alt="">
+                    </div>
+                    <div class="jenna">
+                        <p class="name-jenna">
+                            Jenna Ortega
+                        </p>
+                        <p class="description-jenna">
+                            Jenna Marie Ortega é uma atriz norte-americana que ficou conhecida 
+                            devido aos seus papéis como Harley Diaz em Stuck in
+                            the Middle, no filme ela interpreta Lorraine.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="atores-dois">
+                <div class="descricao-britanny">
+                    <div class="foto-britanny">
+                        <img src="img/Brittany.png" alt="">
+                    </div>
+                    <div class="britanny">
+                        <p class="name-britanny">
+                            Brittany Snow
+                        </p>
+                        <p class="description-britanny">
+                            Brittany Anne Snow é uma atriz, modelo e cantora norte-americana. 
+                            Ela é mais conhecida por seus papéis em Operação Babá,
+                            no filme ela ficou com o papel de Bobby-Lynne.
+                        </p>
+                    </div>
+                </div>
+                <div class="descricao-kid">
+                    <div class="foto-kid">
+                        <img src="img/Kid.png" alt="">
+                    </div>
+                    <div class="kid">
+                        <p class="name-kid">
+                            kid Cudi
+                        </p>
+                        <p class="description-kid">
+                            Scott Ramon Seguro Mescudi mais conhecido por seu nome artístico 
+                            Kid Cudi é um rapper, cantor, compositor, produtor
+                            musical e ator americano. Interpretando Jackson Hole.
+                        </p>
+                    </div>
+                </div>
+                <div class="descricao-ure">
+                    <div class="foto-ure">
+                        <img src="img/Stephen.png" alt="">
+                    </div>
+                    <div class="ure">
+                        <p class="name-ure">
+                            Stephen Ure
+                        </p>
+                        <p class="description-ure">
+                            Stephan trabalhou em produções de tv como The Hobbit, no 
+                            filme foi responsavel pelo marido de Pearl, Howard.
+                        </p>
+                    </div>
+                </div>
+                <div class="descricao-owen">
+                    <div class="foto-owen">
+                        <img src="img/Owen.png" alt="">
+                    </div>
+                    <div class="ure">
+                        <p class="name-owen">
+                            Owen Campbell
+                        </p>
+                        <p class="description-owen">
+                            É um ator americano que desempenhou os papéis principais nos filmes 
+                            "As You Are" e "Super Dark Times". No filme ele
+                            interpreta RJ Nichols, namorado de Lorraine.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="concept" id="concept">
+            <h1 class="titulo-concept">Além da estética</h1>
+            <h2 class="sub-titulo-concept">Do concept a Protése</h2>
+            <div class="descricoes">
+                <div class="concept-art">
+                    <div class="tahiwi">
+                        <div class="descricao-concept">
+                            <div class="img-concept">
+                                <img src="img/concept-img.png" alt="">
+                            </div>
+                            <p class="name-tahini">
+                                Tahiwi Trenor-Hun
+                            </p>
+                            <p class="description-concept">
+                                Tahiwi Trenor é um concept art senior da Weta Workshop 
+                                responsavel pelo concept de Pearl contando com três alternativas
+                                iniciais e uma pintura da escultura final, além de ter trabalho 
+                                em X seus projetos tmabem contam com participação na
+                                serie da netflix Love, Death and Robots.
+                            </p>
+                            <a class="botao-artstation" href="#">
+                                Confira no ArtStation
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="proteses">
+                    <div class="weta">
+                        <div class="descricao-protese">
+                            <div class="img-protese">
+                                <img src="img/protese-img.png" alt="">
+                            </div>
+                            <p class="name-weta">
+                                Wētā Workshop
+                            </p>
+                            <p class="description-weta">
+                                Weta Workshop ficaram responsáveis pela prótese da personagem Pearl encarrecados por seu envelhecimento, Ti west já
+                                tinha preferência no trabalho do estúdio o classificando um de seus favoritos, com a ajuda dos concepts feitos por
+                                Tahiwi eles seguiram o trabalho para torna-lá assustadora mantendo o mais real possível
+                            </p>
+                            <a href="#" class="botao-weta">
+                                Confira em Weta
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="sequencias" id="sequencias"></section>
     </main>
     <footer></footer>
 </body>
+
 </html>
