responsividade quase completa

--- a/ds1t-b/projeto-hamburguer/index.html
+++ b/ds1t-b/projeto-hamburguer/index.html
@@ -58,6 +58,9 @@
             </a>
         </div>
         <nav>
+            <a href="#" class="menu__container">
+                <i class="menu__bars"></i>
+            </a>
             <ul class="menu">
                 <li>
                     <a href="#home">Início</a>
