tentativa de slide

--- a/ds1m-b/monica/index.html
+++ b/ds1m-b/monica/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/historia.css">
     <link rel="stylesheet" href="./css/casal-warren.css">
+    <link rel="stylesheet" href="./css/slide.css">
+
     <title>One Page </title>
 </head>
 <body>
@@ -84,7 +86,21 @@
             </div>
         
         </section>
-        <section class="trilogia/trailers"> Trilogia/Trailers </section>
+
+        <section class="trilogia/trailers"> 
+            
+        <span> Trilogia/ Trailers </span>
+
+        <div class="container-slide"> 
+            <div class="action-button" id="previous">&laquo</div>
+            <div class="container-items" id="container-items"></div>
+            <div class="action-button" id="next">&raquo</div>
+
+            <script src="./js/slideShow.js"></script>
+
+        </div>
+        </section>
+
         <section class="trilha-sonora"> Trilha sonora </section>
         <section class="galeria"> Galeria </section>
 
