--- a/ds1m-a/genivania/index.html
+++ b/ds1m-a/genivania/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./css/trailer.css">
     <link rel="stylesheet" href="./css/personagem.css">
     <link rel="stylesheet" href="./css/curiosidades.css">
+    <link rel="stylesheet" href="./css/responsividade.css">
 </head>
 
 <body>
@@ -92,7 +93,7 @@
             <h5 class="trailer_title"> TRAILER</h5>
             <div class="img_trailer">
 
-                <a href="https://www.youtube.com/watch?v=0Jgk65L6VxM" >
+                <a href="https://www.youtube.com/watch?v=0Jgk65L6VxM" target="_blank" class="card">
                     <img class="trailer_avatar" src="./img/Avatar-youtube 1.png" alt="foto">
                 </a>
             </div>
