--- a/ds1m-b/Eduardo Ribeiro Pimenta/index.html
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/index.html
@@ -45,8 +45,8 @@
             <span class="tripulante">tripulantes</span> é encontrar o
             <span class="impostor">impostor</span>, que tem como objetivo eliminar os outros jogadores sem ser descobrerto.</p>
             <img class="tablet" src="./img/tablet.png" alt="tablet amongus">
-            <img class="red" src="./img/red.png" alt="">
-            <img class="pink"src="img/pink.png" alt="">
+            <img class="red" src="./img/red.png" alt="among us red">
+            <img class="pink"src="img/pink.png" alt="among us pink">
         </section>
         <section class="novidades" id="novidades">
             <h2 class="section-title">Novidades</h2>
@@ -59,27 +59,27 @@
                             <span>NOVO MAPA!!!</span>
                         </div>
                         <div class="banner">     
-                            <img class="images" src="./img/novas_customizacoes.png" alt="">
+                            <img class="images" src="./img/novas_customizacoes.png" alt="novas customizações">
                             <img class="molde" src="./img/molde.png" alt="molde">
                             <span>NOVAS CUSTOMIZAÇÕES</span>
                         </div>
                         <div class="banner"> 
-                            <img class="images" src="./img/amongus_vr.png" alt="">  
+                            <img class="images" src="./img/amongus_vr.png" alt="among us vr">  
                             <img class="molde" src="./img/molde.png" alt="molde">
                             <span>AMONG US VR!!!</span>
                         </div>
                         <div class="banner">
-                            <img class="images" src="./img/amongus_x_arcane.png" alt="">   
+                            <img class="images" src="./img/amongus_x_arcane.png" alt="among us x arcane">   
                             <img class="molde" class="images" src="./img/molde.png" alt="molde">
                             <span>AMONG US X ARCANE</span>
                         </div>
                         <div class="banner">
-                            <img class="images" src="./img/nova_aba_customiacao.png" alt="">   
+                            <img class="images" src="./img/nova_aba_customiacao.png" alt=" nova aba de customização">   
                             <img class="molde" class="images" src="./img/molde.png" alt="molde">
                             <span>NOVA ABA DE CUSTOMIZAÇÃO</span>
                         </div>
                         <div class="banner">
-                            <img class="images" src="./img/novidades.png" alt="">   
+                            <img class="images" src="./img/novidades.png" alt=" novidades em breve">   
                             <img class="molde" class="images" src="./img/molde.png" alt="molde">
                             <span>NOVIDADES EM BREVE!!!</span>
                         </div>
@@ -101,8 +101,8 @@
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </div>
-            <img class="cian" src="./img/cian.png" alt="">
-            <img class="green" src="./img/green.png" alt="">
+            <img class="cian" src="./img/cian.png" alt="among us cian">
+            <img class="green" src="./img/green.png" alt="among us green">
         </section>
         <section class="download" id="download">
             <h2 class="section-title">DOWNLOaD</h2>
@@ -128,8 +128,8 @@
                 </div>
             </div>
             <div>
-                <img class="brown" src="./img/brown.png" alt="">
-                <img class="yellow" src="./img/yellow.png" alt="">
+                <img class="brown" src="./img/brown.png" alt="among us brown">
+                <img class="yellow" src="./img/yellow.png" alt="among us yellow">
             </div>
 
         </section>
@@ -138,7 +138,7 @@
         <div class="copyright">
             <p>Todos os direitos reservados 2022 | Desenvolvido por Eduardo Ribeiro</p>         
         </div> 
-        <img class="orange" src="./img/orange.png" alt="">
+        <img class="orange" src="./img/orange.png" alt="among us orange">
     </footer>
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
