--- a/ds1m-b/Paula-B/index.html
+++ b/ds1m-b/Paula-B/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/curiosidades.css">
     <link rel="stylesheet" href="./css/slider-images.css">
     <link rel="stylesheet" href="./css/cuidados.css">
-    <link rel="stylesheet" href="./css/contato.css">
+    <link rel="stylesheet" href="./css/porque.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
 
-    
+
     <script src="https://kit.fontawesome.com/6cc8a6f404.js" crossorigin="anonymous"></script>
 
     <title>a cat's life</title>
@@ -53,7 +53,7 @@
                     <a href="#cuidados">Cuidados</a>
                 </li>
                 <li>
-                    <a href="#Contato">Contato</a>
+                    <a href="#porque">Porque?</a>
                 </li>
             </ul>
         </nav>
@@ -200,8 +200,12 @@
                 <div class="mySlides-images fade ">
                     <img src="./img/slide7.png " alt="Image 6 " />
                 </div>
+                <div class="mySlides-images fade ">
+                    <img src="./img/ded022.png " alt="Image 6 " />
+                </div>
             </div>
             <div class="dots-images">
+                <span class="dot-images"></span>
                 <span class="dot-images"></span>
                 <span class="dot-images"></span>
                 <span class="dot-images"></span>
@@ -229,36 +233,48 @@
                 <img src="./img/PATINHA.png" alt="" class="icon2">
             </div>
             <div class="cuidados_container">
-                
+                <div class="cuidado">
+                    <h2 class="cuidado_title">Nem sempre é fácil saber se seu gato está feliz. Eles podem mostrar seu amor ronronando e se esfregando em você, mas alguns gatos são mais distantes do que outros, e pode ser difícil decifrar suas vocalizações e comportamentos. Seja
+                        você um novo tutor ou um dono experiente, existem várias coisas fáceis que você pode fazer para ajudar a manter seu gato feliz e saudável. </h2>
+                </div>
+                <div class="list">
+                    <li class="cuidados_list">
+
+                        <p class="list">
+                            🐈1 - Preserve a Caixa de Areia Sempre Limpa.
+                        </p>
+                        <p class="list">
+                            🐈2 - Consultas Regulares ao Veterinário.
+                        </p>
+                        <p class="list">
+                            🐈3 - Fazer uma Castração.
+                        </p>
+                        <p class="list">
+                            🐈4 - Sempre Escove o Pelo do Seu Gato.
+                        </p>
+                        <p class="list">
+                            🐈5 - Ofereça uma Ração de Boa Qualidade e água fresca.
+                        </p>
+                        <p class="list">
+                            🐈6 - Brinque com Seu Gato.
+                        </p>
+                        <p class="list">
+                            🐈7 - Aprecie o seu comportamento.
+                        </p>
+                    </li>
+                </div>
+
             </div>
         </section>
-        <section class="Contato" id="Contato">
-            <div class="contatos">
-                <div class="contato-title">
-                    <h2 class="title-contato"> Contatos</h2>
-                </div>
-                <div class="contatos-description">
-                    <span>(11)96982-8192</span>
-                    <span>Paulablesa6@gmail.com</span>
-                </div>
+        <section class="porque" id="porque">
+            <div class="icon">
+                <h2 class="title_main"> PORQUE ESCOLHER UM GATO?</h2>
             </div>
-            <div class="dedo">
-                <img src="./img/dedo.png" alt="">
-            </div>
-            <div class="contatos">
-                <div class="contato-title">
-                    <h2 class="title-redes-sociais">Redes sociais</h2>
-                </div>
-                <div class="contatos-icon">
-
-                    <a href="https://www.instagram.com/p_blesaa/" target="_blank">
-                        <img src="./img/icon-instagram.png" alt="">
-                    </a>
-                    <a href="https://www.linkedin.com/in/paula-blesa-5ab53224a/" target="_blank">
-                        <img src="./img/icon-linkedin.png" alt="">
-                    </a>
-
-                </div>
+            <div class="container_porque">
+                <h2 class="porque_title"> Gatos são pets independentes, Cientistas provaram que eles podem melhorar sua saúde, Eles nos ajudam a dormir, Gatos diminuem alergias, O ronronar dos bichanos é regenerador, Eles são excelentes caçadores, Gatos são muito leais. </h2>
+                <h3 class="porque_title">Estudos mostram que os bichanos são tão leais quanto os cachorros! Uma pesquisa organizada pela Universidade de Oregon, nos Estados Unidos, mostrou que a maioria dos gatos fica incomodada e desconfiada quando seu tutor não está por perto.Por
+                    outro lado, quando seu amigo volta, o bichano fica mais feliz e relaxado! Esse teste mostra que, diferentemente do que alguns mentirosos espalham, os felinos confiam no seu tutor, além de possuírem um enorme carinho por sua família!
+                </h3>
             </div>
         </section>
     </main>
